Fix form styles on mobile

--- a/src/scss/modalWindow.scss
+++ b/src/scss/modalWindow.scss
@@ -30,6 +30,9 @@
   .requestForm {
     @include Form;
     margin-right: 10%;
+    @media only screen and (max-width: 600px) {
+      margin-right: 0;
+    }
   }
 }
 body:not(.ReactModal__Body--open) {
@@ -43,6 +46,11 @@ body:not(.ReactModal__Body--open) {
     .form {
       @include Form;
       margin-right: 10%;
+      @media only screen and (max-width: 600px) {
+        margin-right: 15px;
+        margin-left: 15px;
+        padding: 40px 30px 15px;
+      }
     }
   }
 }
