--- a/src/scss/ui.scss
+++ b/src/scss/ui.scss
@@ -8,6 +8,6 @@
   background: url("../images/close.svg");
   background-size: cover;
   content: '';
-  top: 30px;
-  right: 30px;
+  top: 15px;
+  right: 15px;
 }
